Restore SUMMARY.md and switch Pages build to HonKit

--- a/.github/workflows/gitbook.yml
+++ b/.github/workflows/gitbook.yml
@@ -17,29 +17,27 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
-        
-    - name: Install dependencies
+
+    - name: Install HonKit
       run: |
-        npm install -g gitbook-cli@2.3.2
-        
-    - name: Build GitBook
+        npm install -g honkit
+
+    - name: Build with HonKit
       run: |
-        gitbook install
-        gitbook build . _book
-        
+        honkit build . _book
+
     - name: Setup Pages
       uses: actions/configure-pages@v4
-      
+
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
